Fix variable name and created a auto tasks with seeds.rb

--- a/test/fixtures/addresses.yml
+++ b/test/fixtures/addresses.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  stret: MyString
+  street: MyString
   city: MyString
   state: MyString
   contact_id: 
 
 two:
-  stret: MyString
+  street: MyString
   city: MyString
   state: MyString
   contact_id: 
